# opengl_base

./: CMakeLists.txt  README.md
libs/gli/: CMakeLists.txt
libs/glloadgen/: .hgtags  CMakeLists.txt
libs/lodepng/: CMakeLists.txt
shader/: frame.frag  frame.vert  shader.frag  shader.vert  utility.shader
src/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utility.cpp  Utility.h  main.cpp
